SONAR-26796 Fix double QG notifications on Slack integration